--- a/app/src/main/res/layout/activity_manage_app.xml
+++ b/app/src/main/res/layout/activity_manage_app.xml
@@ -6,13 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".ManageAppActivity">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="You are in manage app"
+    <Button
+        android:id="@+id/buttonManageUsers"
+        android:layout_width="210dp"
+        android:layout_height="75dp"
+        android:text="@string/manage_users"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonManageGames"
+        app:layout_constraintVertical_bias="0.26" />
+
+    <Button
+        android:id="@+id/buttonManageGames"
+        android:layout_width="210dp"
+        android:layout_height="75dp"
+        android:text="@string/manage_games"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.336" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
