--- a/app/src/main/res/layout/activity_browse_games.xml
+++ b/app/src/main/res/layout/activity_browse_games.xml
@@ -7,12 +7,17 @@
     tools:context=".BrowseGamesActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/browseGamesTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="22sp"
+        android:textAlignment="center"
         android:text="You are in Browse Games"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.452" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
