--- a/app/src/main/res/layout/activity_search_games.xml
+++ b/app/src/main/res/layout/activity_search_games.xml
@@ -6,13 +6,45 @@
     android:layout_height="match_parent"
     tools:context=".SearchGamesActivity">
 
+    <AutoCompleteTextView
+        android:id="@+id/autoCompleteTextView"
+        android:layout_width="361dp"
+        android:layout_height="57dp"
+        android:completionThreshold="1"
+        android:hint="@string/search_for_a_game"
+        android:padding="16.5dp"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/searchTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.279" />
+
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/searchTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="You are in search games"
+        android:textAlignment="center"
+        android:text=""
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.461" />
+
+    <Button
+        android:id="@+id/inSearchButton"
+        android:layout_width="198dp"
+        android:layout_height="58dp"
+        android:textSize="17sp"
+        android:text="@string/purchase_game"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchTextView"
+        app:layout_constraintVertical_bias="0.435" />
 </androidx.constraintlayout.widget.ConstraintLayout>
