--- a/app/src/main/res/layout/activity_view_owned.xml
+++ b/app/src/main/res/layout/activity_view_owned.xml
@@ -7,9 +7,25 @@
     tools:context=".ViewOwnedActivity">
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/ownedGamesTitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Your Owned Games"
+        android:textAlignment="center"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/ownedGamesTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.103" />
+
+    <TextView
+        android:id="@+id/ownedGamesTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="22sp"
+        android:textAlignment="center"
         android:text="You are in view owned games"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
