Committing and Pushing this code before adding recycler view for user deletion function... everything is working so far (IN PROGRESS)

--- a/app/src/main/res/layout/activity_delete_games.xml
+++ b/app/src/main/res/layout/activity_delete_games.xml
@@ -4,14 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".userActivities.ReturnGamesActivity">
+    tools:context=".adminActivities.DeleteGamesActivity">
+
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/returnGamesRecyclerView"
+        android:id="@+id/deleteGamesRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="4dp"
         android:scrollbars="vertical"
 
         />
+
 </RelativeLayout>
