--- a/app/src/main/res/layout/activity_manage_games.xml
+++ b/app/src/main/res/layout/activity_manage_games.xml
@@ -4,6 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ManageGamesActivity">
+    tools:context=".adminActivities.ManageGamesActivity">
 
+    <Button
+        android:id="@+id/addGameButton"
+        android:layout_width="185dp"
+        android:layout_height="85dp"
+        android:text="@string/add_game"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/deleteGameButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.673" />
+
+    <Button
+        android:id="@+id/deleteGameButton"
+        android:layout_width="185dp"
+        android:layout_height="85dp"
+        android:text="@string/delete_game"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.592" />
 </androidx.constraintlayout.widget.ConstraintLayout>
