--- a/app/src/main/res/layout/activity_add_game.xml
+++ b/app/src/main/res/layout/activity_add_game.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".adminActivities.ManageUsersActivity">
+    tools:context=".adminActivities.AddGameActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
