--- a/app/src/main/res/layout/game_card_item.xml
+++ b/app/src/main/res/layout/game_card_item.xml
@@ -2,45 +2,49 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="8dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="4dp">
     
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="4dp" >
+        android:layout_margin="16dp" >
         
         <ImageView
+            android:id="@+id/imageView"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:padding="2dp"
-            android:id="@+id/imageView"/>
+            android:padding="2dp" />
 
         <TextView
+            android:id="@+id/gameTitleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Line 1"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@android:color/black"
+            android:paddingEnd="30dp"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/imageView"
-            android:id="@+id/gameTitleTextView"/>
+            android:layout_marginStart="8dp" />
 
         <TextView
             android:id="@+id/gameDescriptionTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Line 2"
-            android:textSize="15sp"
+            android:textSize="12sp"
+            android:paddingEnd="35dp"
             android:layout_below="@+id/gameTitleTextView"
             android:layout_toEndOf="@+id/imageView"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginStart="10dp"/>
 
         <ImageView
             android:id="@+id/image_return"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/ic_return"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"/>
