--- a/app/src/main/res/layout/activity_add_game.xml
+++ b/app/src/main/res/layout/activity_add_game.xml
@@ -6,4 +6,81 @@
     android:layout_height="match_parent"
     tools:context=".adminActivities.AddGameActivity">
 
+    <TextView
+        android:id="@+id/addGameTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/enter_game_information_below"
+        android:textSize="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/editTextAddGameName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.476" />
+
+    <EditText
+        android:id="@+id/editTextAddGameName"
+        android:layout_width="225dp"
+        android:layout_height="62dp"
+        android:layout_marginTop="96dp"
+        android:ems="10"
+        android:hint="@string/enter_game_title"
+        android:inputType="text"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextAddGameDesc"
+        android:layout_width="292dp"
+        android:layout_height="87dp"
+        android:layout_marginTop="24dp"
+        android:ems="10"
+        android:hint="@string/enter_game_description"
+        android:inputType="text"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextAddGameName" />
+
+    <EditText
+        android:id="@+id/editTextAddGamePrice"
+        android:layout_width="195dp"
+        android:layout_height="77dp"
+        android:layout_marginTop="24dp"
+        android:ems="10"
+        android:hint="@string/enter_game_price"
+        android:inputType="numberDecimal"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextAddGameDesc" />
+
+    <EditText
+        android:id="@+id/editTextAddGameCopies"
+        android:layout_width="195dp"
+        android:layout_height="77dp"
+        android:ems="10"
+        android:hint="@string/enter_number_of_copies"
+        android:inputType="numberDecimal"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextAddGamePrice"
+        app:layout_constraintVertical_bias="0.07" />
+
+    <Button
+        android:id="@+id/buttonAddGameToDatabase"
+        android:layout_width="178dp"
+        android:layout_height="50dp"
+        android:text="@string/add_game"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextAddGameCopies" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
