--- a/app/src/main/res/layout/activity_return_games.xml
+++ b/app/src/main/res/layout/activity_return_games.xml
@@ -6,6 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".userActivities.ReturnGamesActivity">
 
+    <TextView
+        android:id="@+id/returnGamesTextView"
+        android:layout_width="214dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="97dp"
+        android:layout_marginBottom="689dp"
+        android:text="@string/games_to_return"
+        android:textAlignment="center"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/emptyReturnGamesTextView"
+        android:layout_width="275dp"
+        android:layout_height="96dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="66dp"
+        android:layout_marginBottom="481dp"
+        android:text=""
+        android:textAlignment="center"
+        android:textSize="20sp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/returnGamesRecyclerView"
         android:layout_width="match_parent"
