--- a/app/src/main/res/layout/activity_add_admin.xml
+++ b/app/src/main/res/layout/activity_add_admin.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/star_wars_phone_bg"
     tools:context=".adminActivities.AddAdminActivity">
 
     <TextView
@@ -12,18 +13,22 @@
         android:layout_height="wrap_content"
         android:text="@string/add_admin_credentials"
         android:textSize="24sp"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/editTextAddAdminUsername"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.393" />
 
     <EditText
         android:id="@+id/editTextAddAdminUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="164dp"
+        android:layout_marginTop="136dp"
         android:ems="10"
         android:hint="@string/username"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:inputType="textPersonName"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,6 +43,8 @@
         android:layout_marginTop="60dp"
         android:ems="10"
         android:hint="@string/password"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:inputType="textPassword"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,6 +61,8 @@
         android:hint="@string/confirm_password"
         android:inputType="textPassword"
         android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,6 +75,7 @@
         android:layout_marginTop="92dp"
         android:text="@string/add_admin_to_db"
         android:textSize="18sp"
+        android:backgroundTint="#700000FF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
