--- a/app/src/main/res/layout/activity_add_game.xml
+++ b/app/src/main/res/layout/activity_add_game.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/star_wars_falcon_bg"
     tools:context=".adminActivities.AddGameActivity">
 
     <TextView
@@ -12,6 +13,7 @@
         android:layout_height="wrap_content"
         android:text="@string/enter_game_information_below"
         android:textSize="24dp"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/editTextAddGameName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,6 +27,8 @@
         android:layout_marginTop="96dp"
         android:ems="10"
         android:hint="@string/enter_game_title"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:inputType="text"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,6 +44,8 @@
         android:ems="10"
         android:hint="@string/enter_game_description"
         android:inputType="text"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,6 +58,8 @@
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="@string/enter_game_price"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:inputType="numberDecimal"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,6 +73,8 @@
         android:ems="10"
         android:hint="@string/enter_number_of_copies"
         android:inputType="numberDecimal"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,6 +88,7 @@
         android:layout_height="50dp"
         android:text="@string/add_game"
         android:textSize="20sp"
+        android:backgroundTint="#80F3133A"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
