--- a/app/src/main/res/layout/activity_delete_games.xml
+++ b/app/src/main/res/layout/activity_delete_games.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="4dp"
-        android:background="@android:color/darker_gray"
+        android:background="@drawable/delete_games_bg"
         android:scrollbars="vertical"/>
 
 </RelativeLayout>
