--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -4,16 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/landing_page_bg"
     tools:context=".userActivities.LandingPageActivity">
+
+    <TextView
+        android:layout_width="349dp"
+        android:layout_height="60dp"
+        android:text="@string/landing_page_title"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="28sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.069" />
 
     <Button
         android:id="@+id/buttonBrowseGames"
         android:layout_width="210dp"
         android:layout_height="75dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="104dp"
+        android:background="#75000000"
         android:text="@string/browse_games"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,6 +38,7 @@
         android:layout_width="210dp"
         android:layout_height="75dp"
         android:layout_marginTop="24dp"
+        android:background="#75000000"
         android:text="@string/search_games"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,6 +50,7 @@
         android:layout_width="210dp"
         android:layout_height="75dp"
         android:layout_marginTop="24dp"
+        android:background="#75000000"
         android:text="@string/view_owned_games"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,6 +62,7 @@
         android:layout_width="210dp"
         android:layout_height="75dp"
         android:layout_marginTop="24dp"
+        android:background="#75000000"
         android:text="@string/return_games"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,14 +73,15 @@
         android:id="@+id/buttonManageApp"
         android:layout_width="210dp"
         android:layout_height="75dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="28dp"
         android:text="@string/manage_app"
+        android:background="#75000000"
         android:textSize="18sp"
         android:visibility="visible"
-        tools:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonReturnGames" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonReturnGames"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
