--- a/app/src/main/res/layout/activity_manage_app.xml
+++ b/app/src/main/res/layout/activity_manage_app.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/manage_app_bg"
     tools:context=".adminActivities.ManageAppActivity">
 
     <Button
@@ -12,6 +13,7 @@
         android:layout_height="75dp"
         android:text="@string/manage_users"
         android:textSize="18sp"
+        android:backgroundTint="@color/semiTransparentPink"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -25,6 +27,7 @@
         android:layout_height="75dp"
         android:text="@string/manage_games"
         android:textSize="18sp"
+        android:backgroundTint="@color/semiTransparentSkyBlue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
